--- a/smtcl_erp/WebRoot/html/kfcz.html
+++ b/smtcl_erp/WebRoot/html/kfcz.html
@@ -149,10 +149,10 @@
 						            </div>
 								</div>
 					    	</div>
-					    	<div class="row" style="margin-left:2px;margin-top:4px;">
+					    	<div class="row" hidden="true" style="margin-left:2px;margin-top:4px;">
 					    		<div class="col-md-2" style="padding:0;margin-top:5px;">
 					    			<div class="row" style="margin-left:14px;" id="conghuojiahuidaku">
-				    					<input type="radio" style="cursor:pointer;" name="radioName"/>
+				    					<input type="radio" readonly="readonly" style="cursor:pointer;" name="radioName"/>
 				    					<span style="font-size:13px;cursor:pointer;">从货架回大库</span>
 					    			</div>
 					    		</div>
