用户管理：新增方向选择 库房操作中 根据当前登录人员自动带出 方向，获取托盘编号也根据方向标识获取； 新增 物料请求，大立体库中状态非1的数据可删除；

--- a/smtcl_erp/WebRoot/html/jcsz.html
+++ b/smtcl_erp/WebRoot/html/jcsz.html
@@ -828,6 +828,22 @@
 							   		</div>
 					            </div>
 					        </div>
+				            <div class="row margin-top-10">
+					        	<div class="col-md-1"></div>
+					            <div class="col-md-2 text-right" style="padding:5 0 0 0;">
+					                <span><span style="color:red;">*</span>方向:</span>
+					            </div>
+					            <div class="col-md-7">
+					                <div class="cus-select" id="fangxiang_name">
+		                                <div class="cus-select-btn"></div>
+		                                <input id="fangxiang" type="text" readonly/> 
+		                                <ul>
+		                                	<li>1</li>
+		                                	<li>2</li>
+		                                </ul>
+		                            </div>
+					            </div>
+					        </div>
 				            <div class="row margin-top-20">
 					        	<div class="col-md-2"></div>
 				            	<div class="col-md-2">
