--- a/smtcl_erp/WebRoot/html/kfcz.html
+++ b/smtcl_erp/WebRoot/html/kfcz.html
@@ -66,7 +66,7 @@
 						                <span><span style="color:red;">*</span>数量：</span>
 						            </div>
 						            <div class="col-md-2">
-						                <input id="up_number" type="number" min="1" style="width:80px;" class="form-control"/>
+						                <input id="up_number" type="number" value="30" min="1" style="width:80px;" class="form-control"/>
 						            </div>
 									<div class="col-md-2 text-right" style="padding:5 0 0 0;">
 						                <span><span style="color:red;">*</span>去往货位：</span>
