--- a/smtcl_erp/WebRoot/html/h_home.html
+++ b/smtcl_erp/WebRoot/html/h_home.html
@@ -164,10 +164,8 @@
 					</div>
 				</div>
 				<div class="col-md-6" style="margin-top:12%;">
-					<div class="col-md-6" style="padding-right:-10px;">
-						<div id="container-speed" style="width:250px;height:155px;"></div>
-					</div>
-					<div class="col-md-6" style="padding-right:-20px;">
+					<div class="col-md-9" id="home_mz_list" style="margin-top:-50px;height:300px;overflow-y:scroll;font-size:12px;margin-left:-120px;"></div>
+					<div class="col-md-3">
 						<div id="container-rpm" style="width:250px;height:155px;"></div>
 					</div>
 				</div>
