--- a/smtcl_erp/WebRoot/html/jcsz.html
+++ b/smtcl_erp/WebRoot/html/jcsz.html
@@ -245,7 +245,7 @@
 			            </div>
 			            <div class="row margin-top-10" style="margin-right:10px;">
 				            <div class="col-md-2 text-right" style="padding:5px 0 0 0;">
-				                <span><span style="color:red;">*</span>电芯类型:</span>
+				                <span><span style="color:red;">*</span>PC编码:<!-- 电芯类型 --></span>
 				            </div>
 				            <div class="col-md-3">
 				                <input id="mozu_dianxinleixing" type="text" class="form-control"/>
