--- a/smtcl_erp/WebRoot/html/h_home.html
+++ b/smtcl_erp/WebRoot/html/h_home.html
@@ -36,7 +36,7 @@
 								<span>归零启动</span>
 							</div>
 							<div class="qfgd" id="duandianqidong_top">
-								<span>断点启动</span>
+								<span>连接状态</span>
 							</div>
 						</div>
 					</div>
@@ -158,7 +158,7 @@
 								<span>归零启动</span>
 							</div>
 							<div class="qfgd" id="duandianqidong_bottom">
-								<span>断点启动</span>
+								<span>连接状态</span>
 							</div>
 						</div>
 					</div>
