--- a/smtcl_erp/WebRoot/html/kfcz.html
+++ b/smtcl_erp/WebRoot/html/kfcz.html
@@ -8,7 +8,7 @@
 	<div class="row margin-top-10 account-company-auth" id="xy" 
 			style="overflow-y:hidden;overflow-x:hidden;background-color:white;
 			height:94%;width:98%;margin-left:2%;">
-		<div class="row">
+		<div id="kfCz" class="row kfShow">
 			<form id="kfcz_id" class="row">
 				<div class="row">
 					<div class="col-md-7">
@@ -328,8 +328,7 @@
 		<a class="button button-glow button-rounded button-raised button-primary butRow">库房操作</a>
 	</div>
 	<div class="col-md-2">
-		<a class="button button-glow button-rounded button-raised button-primary butRow" 
-		   id="showGDFrame">GDFrame</a>
+		<a class="button button-glow button-rounded button-raised button-primary butRow" id="showGDFrame">GDFrame</a>
 	</div>
 	<script type="text/javascript" src="/smtcl_erp/html/js/kfcz.js"></script>
 </body>
