--- a/smtcl_erp/WebRoot/html/h_home.html
+++ b/smtcl_erp/WebRoot/html/h_home.html
@@ -35,7 +35,7 @@
 							<div class="qfgd" id="guilingqidong_top">
 								<span>归零启动</span>
 							</div>
-							<div class="qfgd" id="duandianqidong_top">
+							<div class="qfgd" id="lianjiezhuangtai_top">
 								<span>连接状态</span>
 							</div>
 						</div>
@@ -157,14 +157,14 @@
 							<div class="qfgd" id="guilingqidong_bottom">
 								<span>归零启动</span>
 							</div>
-							<div class="qfgd" id="duandianqidong_bottom">
+							<div class="qfgd" id="lianjiezhuangtai_bottom">
 								<span>连接状态</span>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6" style="margin-top:12%;">
-					<div class="col-md-9" id="home_mz_list" style="margin-top:-50px;height:300px;overflow-y:scroll;font-size:12px;margin-left:-120px;"></div>
+					<div class="col-md-9 home_mz_list" id="home_mz_list"></div>
 					<div class="col-md-3">
 						<div id="container-rpm" style="width:250px;height:155px;"></div>
 					</div>
