--- a/smtcl_erp/WebRoot/html/jcsz.html
+++ b/smtcl_erp/WebRoot/html/jcsz.html
@@ -555,233 +555,98 @@
 					               <tbody>
 					               		<tr style="height:22px;">
 					               			<td style="width:3%;font-size:12px;">1</td>
-					               			<td style="width:30%;" class="wlColor">物料维护-新建</td>
+					               			<td style="width:30%;" class="wlColor">物料</td>
 					               			<td style="width:20%;" class="wlColor jueSeQX jueSeQX1">false</td>
 					               		</tr>
 					               		<tr style="height:22px;">
 					               			<td style="width:3%;font-size:12px;">2</td>
-					               			<td style="width:30%;" class="wlColor">物料维护-保存</td>
-					               			<td style="width:20%;" class="wlColor jueSeQX jueSeQX2">false</td>
+					               			<td style="width:30%;" class="mzColor">模组</td>
+					               			<td style="width:20%;" class="mzColor jueSeQX jueSeQX2">false</td>
 					               		</tr>
 					               		<tr style="height:22px;">
 					               			<td style="width:3%;font-size:12px;">3</td>
-					               			<td style="width:30%;" class="wlColor">物料维护-删除</td>
-					               			<td style="width:20%;" class="wlColor jueSeQX jueSeQX3">false</td>
+					               			<td style="width:30%;" class="packColor">pack</td>
+					               			<td style="width:20%;" class="packColor jueSeQX jueSeQX3">false</td>
 					               		</tr>
 					               		<tr style="height:22px;">
 					               			<td style="width:3%;font-size:12px;">4</td>
-					               			<td style="width:30%;" class="mzColor">模组维护-新建</td>
-					               			<td style="width:20%;" class="mzColor jueSeQX jueSeQX4">false</td>
+					               			<td style="width:30%;" class="baseColor">账户设置</td>
+					               			<td style="width:20%;" class="baseColor jueSeQX jueSeQX4">false</td>
 					               		</tr>
 					               		<tr style="height:22px;">
 					               			<td style="width:3%;font-size:12px;">5</td>
-					               			<td style="width:30%;" class="mzColor">模组维护-删除</td>
-					               			<td style="width:20%;" class="mzColor jueSeQX jueSeQX5">false</td>
+					               			<td style="width:30%;" class="kufangColor">发送命令</td>
+					               			<td style="width:20%;" class="kufangColor jueSeQX jueSeQX5">false</td>
 					               		</tr>
 					               		<tr style="height:22px;">
 					               			<td style="width:3%;font-size:12px;">6</td>
-					               			<td style="width:30%;" class="mzColor">模组载具-上调</td>
-					               			<td style="width:20%;" class="mzColor jueSeQX jueSeQX6">false</td>
+					               			<td style="width:30%;" class="plcColor">PLC</td>
+					               			<td style="width:20%;" class="plcColor jueSeQX jueSeQX6">false</td>
 					               		</tr>
 					               		<tr style="height:22px;">
 					               			<td style="width:3%;font-size:12px;">7</td>
-					               			<td style="width:30%;" class="mzColor">模组载具-下调</td>
-					               			<td style="width:20%;" class="mzColor jueSeQX jueSeQX7">false</td>
+					               			<td style="width:30%;" class="dingdanColor">订单维护</td>
+					               			<td style="width:20%;" class="dingdanColor jueSeQX jueSeQX7">false</td>
 					               		</tr>
 					               		<tr style="height:22px;">
 					               			<td style="width:3%;font-size:12px;">8</td>
-					               			<td style="width:30%;" class="mzColor">模组载具-添加</td>
-					               			<td style="width:20%;" class="mzColor jueSeQX jueSeQX8">false</td>
+					               			<td style="width:30%;" class="dingdanColor">订单调度</td>
+					               			<td style="width:20%;" class="dingdanColor jueSeQX jueSeQX8">false</td>
 					               		</tr>
 					               		<tr style="height:22px;">
 					               			<td style="width:3%;font-size:12px;">9</td>
-					               			<td style="width:30%;" class="mzColor">模组载具-保存</td>
-					               			<td style="width:20%;" class="mzColor jueSeQX jueSeQX9">false</td>
+					               			<td style="width:30%;" class="anniuColor">启动调度</td>
+					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX9">false</td>
 					               		</tr>
 					               		<tr style="height:22px;">
 					               			<td style="width:3%;font-size:12px;">10</td>
-					               			<td style="width:30%;" class="mzColor">模组载具-删除</td>
-					               			<td style="width:20%;" class="mzColor jueSeQX jueSeQX10">false</td>
+					               			<td style="width:30%;" class="anniuColor">复位</td>
+					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX10">false</td>
 					               		</tr>
 					               		<tr style="height:22px;">
 					               			<td style="width:3%;font-size:12px;">11</td>
-					               			<td style="width:30%;" class="mzColor">模组指令行-上调</td>
-					               			<td style="width:20%;" class="mzColor jueSeQX jueSeQX11">false</td>
+					               			<td style="width:30%;" class="anniuColor">归零启动</td>
+					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX11">false</td>
 					               		</tr>
 					               		<tr style="height:22px;">
 					               			<td style="width:3%;font-size:12px;">12</td>
-					               			<td style="width:30%;" class="mzColor">模组指令行-下调</td>
-					               			<td style="width:20%;" class="mzColor jueSeQX jueSeQX12">false</td>
+					               			<td style="width:30%;" class="anniuColor">A区自动</td>
+					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX12">false</td>
 					               		</tr>
 					               		<tr style="height:22px;">
 					               			<td style="width:3%;font-size:12px;">13</td>
-					               			<td style="width:30%;" class="mzColor">模组指令行-添加</td>
-					               			<td style="width:20%;" class="mzColor jueSeQX jueSeQX13">false</td>
+					               			<td style="width:30%;" class="anniuColor">B区自动</td>
+					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX13">false</td>
 					               		</tr>
 					               		<tr style="height:22px;">
 					               			<td style="width:3%;font-size:12px;">14</td>
-					               			<td style="width:30%;" class="mzColor">模组指令行-保存</td>
-					               			<td style="width:20%;" class="mzColor jueSeQX jueSeQX14">false</td>
+					               			<td style="width:30%;" class="anniuColor">不检测数量</td>
+					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX14">false</td>
 					               		</tr>
 					               		<tr style="height:22px;">
 					               			<td style="width:3%;font-size:12px;">15</td>
-					               			<td style="width:30%;" class="mzColor">模组指令行-删除</td>
-					               			<td style="width:20%;" class="mzColor jueSeQX jueSeQX15">false</td>
+					               			<td style="width:30%;" class="anniuColor">不检测动作</td>
+					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX15">false</td>
 					               		</tr>
 					               		<tr style="height:22px;">
 					               			<td style="width:3%;font-size:12px;">16</td>
-					               			<td style="width:30%;" class="packColor">pack-新建</td>
-					               			<td style="width:20%;" class="packColor jueSeQX jueSeQX16">false</td>
+					               			<td style="width:30%;" class="anniuColor">RFD自动读取</td>
+					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX16">false</td>
 					               		</tr>
 					               		<tr style="height:22px;">
 					               			<td style="width:3%;font-size:12px;">17</td>
-					               			<td style="width:30%;" class="packColor">pack-删除</td>
-					               			<td style="width:20%;" class="packColor jueSeQX jueSeQX17">false</td>
+					               			<td style="width:30%;" class="anniuColor">启动库指令</td>
+					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX17">false</td>
 					               		</tr>
 					               		<tr style="height:22px;">
 					               			<td style="width:3%;font-size:12px;">18</td>
-					               			<td style="width:30%;" class="packColor">pack-保存</td>
-					               			<td style="width:20%;" class="packColor jueSeQX jueSeQX18">false</td>
+					               			<td style="width:30%;" class="anniuColor">急停</td>
+					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX18">false</td>
 					               		</tr>
 					               		<tr style="height:22px;">
 					               			<td style="width:3%;font-size:12px;">19</td>
-					               			<td style="width:30%;" class="packColor">pack行-上调</td>
-					               			<td style="width:20%;" class="packColor jueSeQX jueSeQX19">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">20</td>
-					               			<td style="width:30%;" class="packColor">pack行-下调</td>
-					               			<td style="width:20%;" class="packColor jueSeQX jueSeQX20">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">21</td>
-					               			<td style="width:30%;" class="packColor">pack行-添加</td>
-					               			<td style="width:20%;" class="packColor jueSeQX jueSeQX21">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">22</td>
-					               			<td style="width:30%;" class="packColor">pack行-删除</td>
-					               			<td style="width:20%;" class="packColor jueSeQX jueSeQX22">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">23</td>
-					               			<td style="width:30%;" class="baseColor">账户设置-角色管理-新建</td>
-					               			<td style="width:20%;" class="baseColor jueSeQX jueSeQX23">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">24</td>
-					               			<td style="width:30%;" class="baseColor">账户设置-角色管理-保存</td>
-					               			<td style="width:20%;" class="baseColor jueSeQX jueSeQX24">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">25</td>
-					               			<td style="width:30%;" class="baseColor">账户设置-角色管理-删除</td>
-					               			<td style="width:20%;" class="baseColor jueSeQX jueSeQX25">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">26</td>
-					               			<td style="width:30%;" class="baseColor">账户设置-用户管理-新建</td>
-					               			<td style="width:20%;" class="baseColor jueSeQX jueSeQX26">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">27</td>
-					               			<td style="width:30%;" class="baseColor">账户设置-用户管理-保存</td>
-					               			<td style="width:20%;" class="baseColor jueSeQX jueSeQX27">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">28</td>
-					               			<td style="width:30%;" class="baseColor">账户设置-用户管理-删除</td>
-					               			<td style="width:20%;" class="baseColor jueSeQX jueSeQX28">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">29</td>
-					               			<td style="width:30%;" class="kufangColor">库房操作-发送命令</td>
-					               			<td style="width:20%;" class="kufangColor jueSeQX jueSeQX29">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">30</td>
-					               			<td style="width:30%;" class="plcColor">PLC-操作权限</td>
-					               			<td style="width:20%;" class="plcColor jueSeQX jueSeQX30">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">31</td>
-					               			<td style="width:30%;" class="dingdanColor">订单调度-下载</td>
-					               			<td style="width:20%;" class="dingdanColor jueSeQX jueSeQX31">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">32</td>
-					               			<td style="width:30%;" class="dingdanColor">订单调度-上调</td>
-					               			<td style="width:20%;" class="dingdanColor jueSeQX jueSeQX32">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">33</td>
-					               			<td style="width:30%;" class="dingdanColor">订单调度-下调</td>
-					               			<td style="width:20%;" class="dingdanColor jueSeQX jueSeQX33">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">34</td>
-					               			<td style="width:30%;" class="dingdanColor">订单调度-选择分解</td>
-					               			<td style="width:20%;" class="dingdanColor jueSeQX jueSeQX34">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">35</td>
-					               			<td style="width:30%;" class="dingdanColor">订单调度-全部分解</td>
-					               			<td style="width:20%;" class="dingdanColor jueSeQX jueSeQX35">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">36</td>
-					               			<td style="width:30%;" class="dingdanColor">订单调度-删除</td>
-					               			<td style="width:20%;" class="dingdanColor jueSeQX jueSeQX36">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">37</td>
-					               			<td style="width:30%;" class="anniuColor">启动调度</td>
-					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX37">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">38</td>
-					               			<td style="width:30%;" class="anniuColor">复位</td>
-					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX38">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">39</td>
-					               			<td style="width:30%;" class="anniuColor">归零启动</td>
-					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX39">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">40</td>
-					               			<td style="width:30%;" class="anniuColor">断点启动</td>
-					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX40">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">41</td>
-					               			<td style="width:30%;" class="anniuColor">不检测数量</td>
-					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX41">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">42</td>
-					               			<td style="width:30%;" class="anniuColor">不检测动作</td>
-					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX42">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">43</td>
-					               			<td style="width:30%;" class="anniuColor">RFD自动读取</td>
-					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX43">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">44</td>
-					               			<td style="width:30%;" class="anniuColor">启动库指令</td>
-					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX44">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">45</td>
-					               			<td style="width:30%;" class="anniuColor">急停</td>
-					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX45">false</td>
-					               		</tr>
-					               		<tr style="height:22px;">
-					               			<td style="width:3%;font-size:12px;">46</td>
-					               			<td style="width:30%;" class="dingdanColor">订单维护</td>
-					               			<td style="width:20%;" class="dingdanColor jueSeQX jueSeQX46">false</td>
+					               			<td style="width:30%;" class="rfidColor">RFID绑定</td>
+					               			<td style="width:20%;" class="rfidColor jueSeQX jueSeQX19">false</td>
 					               		</tr>
 					               </tbody>
 					           </table>
