--- a/smtcl_erp/WebRoot/html/dddd.html
+++ b/smtcl_erp/WebRoot/html/dddd.html
@@ -149,7 +149,7 @@
 			             <div class="input-group">
 			                <input id="pack_code" type="text" readonly class="form-control"/>
 			                 <span class="input-group-btn">
-								  <button class="btn btn-default" id="pack_code_button" type="button">编码</button>
+								  <button class="btn btn-default" id="pack_code_button" type="button">选择</button>
 							 </span>
 							 </div>
 			            </div>
