--- a/smtcl_erp/WebRoot/html/jcsz.html
+++ b/smtcl_erp/WebRoot/html/jcsz.html
@@ -772,8 +772,9 @@
 			                  	<input type="checkbox" id="checkboxAll"></input>
 			                  </th>
 			                  <th class="text-center" style="width:4%;" bgcolor="#EFEFEF"></th>
-			                  <th class="text-center" style="width:46%;" bgcolor="#EFEFEF">托盘编号</th>
-			                  <th class="text-center" style="width:46%;" bgcolor="#EFEFEF">物料编码</th>
+			                  <th class="text-center" style="width:36%;" bgcolor="#EFEFEF">托盘编号</th>
+			                  <th class="text-center" style="width:36%;" bgcolor="#EFEFEF">物料编码</th>
+			                  <th class="text-center" style="width:10%;" bgcolor="#EFEFEF">默认数量</th>
 			               </tr>
 			           </thead>
 					</table>
