--- a/smtcl_erp/WebRoot/html/h_home.html
+++ b/smtcl_erp/WebRoot/html/h_home.html
@@ -32,8 +32,8 @@
 							<div class="qfgd" id="fuwei_top">
 								<span>复位</span>
 							</div>
-							<div class="qfgd" id="guilingqidong_top">
-								<span>归零启动</span>
+							<div class="qfgd" id="duandianqidong_top">
+								<span>断点启动</span>
 							</div>
 							<div class="qfgd" id="lianjiezhuangtai_top">
 								<span>连接状态</span>
@@ -44,22 +44,22 @@
 						<div class="col-md-1 shusongxian">输送线</div>
 						<div class="col-md-5" style="width:400px;">
 							<div class="row">
-								<div class="hui no" id="514" name="HCK-NAME">514</div>
-								<div class="hui no" id="512" name="HCK-NAME">512</div>
-								<div class="hui no" id="510" name="HCK-NAME">510</div>
-								<div class="hui no" id="508" name="HCK-NAME">508</div>
-								<div class="hui no" id="506" name="HCK-NAME">506</div>
-								<div class="hui no" id="504" name="HCK-NAME">504</div>
-								<div class="hui no" id="502" name="HCK-NAME">502</div>
+								<div class="hui no" id="514" name="HOME_HCK-NAME">514</div>
+								<div class="hui no" id="512" name="HOME_HCK-NAME">512</div>
+								<div class="hui no" id="510" name="HOME_HCK-NAME">510</div>
+								<div class="hui no" id="508" name="HOME_HCK-NAME">508</div>
+								<div class="hui no" id="506" name="HOME_HCK-NAME">506</div>
+								<div class="hui no" id="504" name="HOME_HCK-NAME">504</div>
+								<div class="hui no" id="502" name="HOME_HCK-NAME">502</div>
 							</div>
 							<div class="row" style="margin-top:2px;">
-								<div class="hui no" id="513" name="HCK-NAME">513</div>
-								<div class="hui no" id="511" name="HCK-NAME">511</div>
-								<div class="hui no" id="509" name="HCK-NAME">509</div>
-								<div class="hui no" id="507" name="HCK-NAME">507</div>
-								<div class="hui no" id="505" name="HCK-NAME">505</div>
-								<div class="hui no" id="503" name="HCK-NAME">503</div>
-								<div class="hui no" id="501" name="HCK-NAME">501</div>
+								<div class="hui no" id="513" name="HOME_HCK-NAME">513</div>
+								<div class="hui no" id="511" name="HOME_HCK-NAME">511</div>
+								<div class="hui no" id="509" name="HOME_HCK-NAME">509</div>
+								<div class="hui no" id="507" name="HOME_HCK-NAME">507</div>
+								<div class="hui no" id="505" name="HOME_HCK-NAME">505</div>
+								<div class="hui no" id="503" name="HOME_HCK-NAME">503</div>
+								<div class="hui no" id="501" name="HOME_HCK-NAME">501</div>
 							</div>
 						</div>
 					</div>
@@ -67,43 +67,43 @@
 						<div class="col-md-1 huancunku">缓存库</div>
 						<div class="col-md-5" style="width:450px;">
 							<div class="row">
-								<div class="hui no" id="28" name="HCK-NAME">28</div>
-								<div class="hui no" id="27" name="HCK-NAME">27</div>
-								<div class="hui no" id="26" name="HCK-NAME">26</div>
-								<div class="hui no" id="25" name="HCK-NAME">25</div>
-								<div class="hui no" id="24" name="HCK-NAME">24</div>
-								<div class="hui no" id="23" name="HCK-NAME">23</div>
-								<div class="hui no" id="22" name="HCK-NAME">22</div>
+								<div class="hui no" id="28" name="HOME_HCK-NAME">28</div>
+								<div class="hui no" id="27" name="HOME_HCK-NAME">27</div>
+								<div class="hui no" id="26" name="HOME_HCK-NAME">26</div>
+								<div class="hui no" id="25" name="HOME_HCK-NAME">25</div>
+								<div class="hui no" id="24" name="HOME_HCK-NAME">24</div>
+								<div class="hui no" id="23" name="HOME_HCK-NAME">23</div>
+								<div class="hui no" id="22" name="HOME_HCK-NAME">22</div>
 								<div class="head_hui no" style="float:left;line-height:40px;">第四层</div>
 							</div>
 							<div class="row" style="margin-top:2px;">
-								<div class="hui no" id="21" name="HCK-NAME">21</div>
-								<div class="hui no" id="20" name="HCK-NAME">20</div>
-								<div class="hui no" id="19" name="HCK-NAME">19</div>
-								<div class="hui no" id="18" name="HCK-NAME">18</div>
-								<div class="hui no" id="17" name="HCK-NAME">17</div>
-								<div class="hui no" id="16" name="HCK-NAME">16</div>
-								<div class="hui no" id="15" name="HCK-NAME">15</div>
+								<div class="hui no" id="21" name="HOME_HCK-NAME">21</div>
+								<div class="hui no" id="20" name="HOME_HCK-NAME">20</div>
+								<div class="hui no" id="19" name="HOME_HCK-NAME">19</div>
+								<div class="hui no" id="18" name="HOME_HCK-NAME">18</div>
+								<div class="hui no" id="17" name="HOME_HCK-NAME">17</div>
+								<div class="hui no" id="16" name="HOME_HCK-NAME">16</div>
+								<div class="hui no" id="15" name="HOME_HCK-NAME">15</div>
 								<div class="head_hui no" style="float:left;line-height:40px;">第三层</div>
 							</div>
 							<div class="row" style="margin-top:2px;">
-								<div class="hui no" id="14" name="HCK-NAME">14</div>
-								<div class="hui no" id="13" name="HCK-NAME">13</div>
-								<div class="hui no" id="12" name="HCK-NAME">12</div>
-								<div class="hui no" id="11" name="HCK-NAME">11</div>
-								<div class="hui no" id="10" name="HCK-NAME">10</div>
-								<div class="hui no" id="9" name="HCK-NAME">9</div>
-								<div class="hui no" id="8" name="HCK-NAME">8</div>
+								<div class="hui no" id="14" name="HOME_HCK-NAME">14</div>
+								<div class="hui no" id="13" name="HOME_HCK-NAME">13</div>
+								<div class="hui no" id="12" name="HOME_HCK-NAME">12</div>
+								<div class="hui no" id="11" name="HOME_HCK-NAME">11</div>
+								<div class="hui no" id="10" name="HOME_HCK-NAME">10</div>
+								<div class="hui no" id="9" name="HOME_HCK-NAME">9</div>
+								<div class="hui no" id="8" name="HOME_HCK-NAME">8</div>
 								<div class="head_hui no" style="float:left;line-height:40px;">第二层</div>
 							</div>
 							<div class="row" style="margin-top:2px;">
-								<div class="hui no" id="7" name="HCK-NAME">7</div>
-								<div class="hui no" id="6" name="HCK-NAME">6</div>
-								<div class="hui no" id="5" name="HCK-NAME">5</div>
-								<div class="hui no" id="4" name="HCK-NAME">4</div>
-								<div class="hui no" id="3" name="HCK-NAME">3</div>
-								<div class="hui no" id="2" name="HCK-NAME">2</div>
-								<div class="hui no" id="1" name="HCK-NAME">1</div>
+								<div class="hui no" id="7" name="HOME_HCK-NAME">7</div>
+								<div class="hui no" id="6" name="HOME_HCK-NAME">6</div>
+								<div class="hui no" id="5" name="HOME_HCK-NAME">5</div>
+								<div class="hui no" id="4" name="HOME_HCK-NAME">4</div>
+								<div class="hui no" id="3" name="HOME_HCK-NAME">3</div>
+								<div class="hui no" id="2" name="HOME_HCK-NAME">2</div>
+								<div class="hui no" id="1" name="HOME_HCK-NAME">1</div>
 								<div class="head_hui no" style="float:left;line-height:40px;">第一层</div>
 							</div>
 						</div>
@@ -112,22 +112,22 @@
 						<div class="col-md-1 shusongxian">输送线</div>
 						<div class="col-md-5" style="width:400px;">
 							<div class="row">
-								<div class="hui no" id="613" name="HCK-NAME">613</div>
-								<div class="hui no" id="611" name="HCK-NAME">611</div>
-								<div class="hui no" id="609" name="HCK-NAME">609</div>
-								<div class="hui no" id="607" name="HCK-NAME">607</div>
-								<div class="hui no" id="605" name="HCK-NAME">605</div>
-								<div class="hui no" id="603" name="HCK-NAME">603</div>
-								<div class="hui no" id="601" name="HCK-NAME">601</div>
+								<div class="hui no" id="613" name="HOME_HCK-NAME">613</div>
+								<div class="hui no" id="611" name="HOME_HCK-NAME">611</div>
+								<div class="hui no" id="609" name="HOME_HCK-NAME">609</div>
+								<div class="hui no" id="607" name="HOME_HCK-NAME">607</div>
+								<div class="hui no" id="605" name="HOME_HCK-NAME">605</div>
+								<div class="hui no" id="603" name="HOME_HCK-NAME">603</div>
+								<div class="hui no" id="601" name="HOME_HCK-NAME">601</div>
 							</div>
 							<div class="row" style="margin-top:2px;">
-								<div class="hui no" id="614" name="HCK-NAME">614</div>
-								<div class="hui no" id="612" name="HCK-NAME">612</div>
-								<div class="hui no" id="610" name="HCK-NAME">610</div>
-								<div class="hui no" id="608" name="HCK-NAME">608</div>
-								<div class="hui no" id="606" name="HCK-NAME">606</div>
-								<div class="hui no" id="604" name="HCK-NAME">604</div>
-								<div class="hui no" id="602" name="HCK-NAME">602</div>
+								<div class="hui no" id="614" name="HOME_HCK-NAME">614</div>
+								<div class="hui no" id="612" name="HOME_HCK-NAME">612</div>
+								<div class="hui no" id="610" name="HOME_HCK-NAME">610</div>
+								<div class="hui no" id="608" name="HOME_HCK-NAME">608</div>
+								<div class="hui no" id="606" name="HOME_HCK-NAME">606</div>
+								<div class="hui no" id="604" name="HOME_HCK-NAME">604</div>
+								<div class="hui no" id="602" name="HOME_HCK-NAME">602</div>
 							</div>
 						</div>
 					</div>
@@ -154,8 +154,8 @@
 							<div class="qfgd" id="fuwei_bottom">
 								<span>复位</span>
 							</div>
-							<div class="qfgd" id="guilingqidong_bottom">
-								<span>归零启动</span>
+							<div class="qfgd" id="duandianqidong_bottom">
+								<span>断点启动</span>
 							</div>
 							<div class="qfgd" id="lianjiezhuangtai_bottom">
 								<span>连接状态</span>
