--- a/smtcl_erp/WebRoot/html/jcsz.html
+++ b/smtcl_erp/WebRoot/html/jcsz.html
@@ -605,7 +605,7 @@
 					               		</tr>
 					               		<tr style="height:22px;">
 					               			<td style="width:3%;font-size:12px;">11</td>
-					               			<td style="width:30%;" class="anniuColor">归零启动</td>
+					               			<td style="width:30%;" class="anniuColor">断点启动</td>
 					               			<td style="width:20%;" class="anniuColor jueSeQX jueSeQX11">false</td>
 					               		</tr>
 					               		<tr style="height:22px;">
