--- a/smtcl_erp/WebRoot/html/dddd.html
+++ b/smtcl_erp/WebRoot/html/dddd.html
@@ -93,7 +93,7 @@
 							<table class="table table-bordered" style="width:100%;">
 					           <thead>
 					               <tr>
-					                  <th class="text-center" style="width:8%;" bgcolor="#EFEFEF">工单号</th>
+					                  <th class="text-center" style="width:8%;" bgcolor="#EFEFEF">工单序号</th>
 					                  <th class="text-center" style="width:8%;" bgcolor="#EFEFEF">模组号</th>
 					                  <th class="text-center" style="width:8%;" bgcolor="#EFEFEF">载具号</th>
 					                  <th class="text-center" style="width:8%;" bgcolor="#EFEFEF">物料编码</th>
